--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,7 @@ For a stable activation flow, we need
     f'\Big(g(x_{t-\tau})\Big)w_{(t-\tau)0} &= \pm 1\\
     f\Big(g(x_{t-\tau})\Big) &= \pm \frac{g(x_{t-\tau})}{w_{(t-\tau)0}} + c
 \end{align}
-where $c$ is a constant w.r.t (with respect to) $g$. $f$ is a linear function w.r.t $g$, unlike $\tanh$ that was used conventional RNNs. Deep network layers need to have nonlinear components as well. Therefore, Hochreiter et al. decided to use nonlinear activations in the input $g(x_{t-\tau})$ itself. Each nonlinear structure is called a \textit{gate}. This overall layer is called LSTM (long short-term memory) and could be stacked just like a standard RNN layer \cite{hochreiter_long_1997}. Some works stack two inverted RNN layers in order to enable the network to see future tokens as well as the past ones, called BiRNN (bidirectional RNN).
+where $c$ is a constant w.r.t (with respect to) $g$. $f$ is a linear function w.r.t $g$, unlike $\tanh$ that is used with conventional RNNs. Deep network layers need to have nonlinear components as well. Therefore, Hochreiter et al. decided to use nonlinear activations in the input $g(x_{t-\tau})$ itself. Each nonlinear structure is called a \textit{gate}. This overall layer is called LSTM (long short-term memory) and could be stacked just like a standard RNN layer \cite{hochreiter_long_1997}. Some works stack two inverted RNN layers in order to enable the network to see future tokens as well as the past ones, called BiRNN (bidirectional RNN).
 
 At the time, the NLP (natural language processing) community used a stack of RNN layers that grabs the contextual information out of the input (\textit{encoder}), and another stack of layers that processed this information for the output (\textit{decoder}) for tasks involving sequence transformation (i.e. translation). The current token is accepted at each layer, whereas the decoder layer output is used as the prediction for the next token.
 
@@ -98,7 +98,7 @@ GPT-3 (Brown et al.) removes the fine-tuning step altogether, proposing \textit{
 
 \subsection{The Paper: Unifying Large Language Models and Knowledge Graphs: A Roadmap}\label{kgllm}
 
-The paper divides the approaches into three parts. KG-enhanced LLMs aim to increase accuracy of the answers (i.e. prevent hallucinations) by introducing KGs as structured information to the LLM. LLM-augmented KGs, on the other hand utilizes LLMs in the construction and refinement of KGs. There is another approach called Synergized LLMs + KGs \cite{pan_unifying_2024} to which where was not time to read and understand. I could only read KG-enhanced LLMs.
+The paper divides the approaches into three parts. KG-enhanced LLMs aim to increase accuracy of the answers (i.e. prevent hallucinations) by introducing KGs as structured information to the LLM. LLM-augmented KGs, on the other hand utilizes LLMs in the construction and refinement of KGs. There is another approach called Synergized LLMs + KGs \cite{pan_unifying_2024} to which there was not time to read and understand. I could only read KG-enhanced LLMs.
 
 KG-enhanced LLMs are further divided. Firstly, there are works using KG information in the training objective \cite{pan_unifying_2024}. GLM (Graph Guided Mask LM) uses KGs to mask each entity with a sample. Sampling weight for each entity depends on document frequency and shortest distance to the target entity. They also sample a \textit{negative entity} as they call it. The similarity score between the positive-negative pair is added to the MLM loss to improve generalization \cite{shen_exploiting_2020}. EBERT has a masking method that adaptively switches from words (MLM) to more complex domain relevant phrases. It further uses an association graph to sample neighboring pairs, creating semantic-aware embeddings for each phrase of a pair using cross attention \cite{zhang_e-bert_2021}. 
 
@@ -106,22 +106,22 @@ Some methods aim to fuse textual and knowledge information \cite{pan_unifying_20
 
 The methods above do not adapt well to the changing data, requiring retraining for the new samples. There is another branch of studies focused on using the knowledge during inference \cite{pan_unifying_2024}. In the REALM paper, Given a context $x$, encoded as dense vectors as query; top scoring encoded document variables $z$ are obtained via MIPS (Maximum Inner Product Search, which works like the attention mechanism) from a KB (knowledge base). Later, $x$ and $z$ are concatenated as input to a generator that is pre-trained on MLM and fine-tuned on open domain QA. The (input and document) encoders and the generator are BERT models. The pipeline is trained end-to-end. For a stable optimization, the document encoder’s parameters are updated periodically \cite{guu_realm_2020}. RAG (retrieval augmented generation) uses an encoder-decoder (seq2seq) transformer (BART) as the generator and fixed document encoders \cite{lewis_retrieval-augmented_2021}. Story fragments adds a short-term memory in which newly seen passages are added. This memory indirectly contributes salience information \cite{wilmot_memory_2021}. EMAT uses MIPS search between a query and a number of keys each mapping to a value in a memory. The obtained key-value pairs are incorporated into the encoder part of a seq2seq transformer \cite{wu_efficient_2022}. 
 \section{Task: Relation Extraction via Manual Prompting}\label{relx_manual_prompt}
-The supervisor suggested a simple idea. I was expected to have an LLM model output triples for a given passage via prompt engineering. The LLM was going to process the prompt without intermediary steps during inference. I started searching along the lines of \texttt{graph construction via prompting}, expecting to find abundant materials. The works that are found if any, either had prompts that are not suitable for task, or were using complex approaches that are not end-to-end. Most of the works are only skimmed through. One of such works was by Carta et al. which was using multiple steps (as the name "iterative" in the title) \cite{carta_iterative_2023}. The scarcity of the results was probably due to the terms given to the search engine. I could have been more descriptive or used different words. In the last month of the internship period, replacing the phrase \texttt{graph construction} with its formal counterpart \textit{relation extraction} in the search term, resulted in more promising results. I was not familiar with the term \textit{relation extraction} at the start of the internship. Results were not checked due to limited time. 
+The supervisor suggested a simple idea. I was expected to have an LLM model output triples for a given passage via prompt engineering. The LLM was going to process the prompt without intermediary steps during inference. I started searching along the lines of \texttt{graph construction via prompting}, expecting to find abundant materials. The works that are found if any, either had prompts that are not suitable for task, or were using complex approaches that are not end-to-end. Most of the works are only skimmed through. One of such works is by Carta et al. which uses multiple steps (as the name "iterative" in the title) \cite{carta_iterative_2023}. The scarcity of the results was probably due to the terms given to the search engine. I could have been more descriptive or used different words. In the last month of the internship period, replacing the phrase \texttt{graph construction} with its formal counterpart \textit{relation extraction} in the search term, resulted in more promising results. I was not familiar with the term \textit{relation extraction} at the start of the internship. Results were not checked due to limited time. 
 
-Query part of the most promising prompt that Zhu et al. is used with some modifications. With their prompt Zhu et al. claim to achieve a micro-F1 score of 4.4 and 7.2 using ChatGPT web interface and the GPT-4 model on SciERC dataset respectively. However, they do not describe whether they fine-tuned GPT-4 and which model was being used for the ChatGPT and so forth \cite{zhu_llms_2024}. The prompts and their results are given in part~\ref{man_prompts}. List of predicates could grow with number of edge classes a KG has. This could be a problem when \textit{context window} (maximum number of tokens input has) of an LLM is smaller than the prompt, though this never happened with the models that are tried. Nevertheless, another version of the prompt which does not have the list of predicates was also experimented with. 
+Query part of the most promising prompt that Zhu et al. is used with some modifications. With their prompt Zhu et al. claim to achieve a micro-F1 score of 4.4 and 7.2 using ChatGPT web interface and the GPT-4 model on SciERC dataset respectively. However, they do not describe whether they fine-tuned GPT-4 and which model they used for the ChatGPT and so forth \cite{zhu_llms_2024}. The prompts and their results are given in part~\ref{man_prompts}. List of predicates could grow with number of edge classes a KG has. This could be a problem when \textit{context window} (maximum number of tokens input has) of an LLM is smaller than the prompt, though this never happened with the models that are tried. Nevertheless, another version of the prompt which does not have the list of predicates is also used in the experiment. 
 
 Before proceeding, there are problems to point out on accuracy of the outputs. Firstly, it is challenging to find a suitable ground truth. Due to the constrained nature (i.e. schema and ontology) of KGs, the number of classes that the nodes and edges could take is finite. Assuming CWA, if a KG represents the real world accurately (without any negatives in the real world data that the LLM is trained on), it could be used as a ground truth for evaluation. Secondly, the LLM may give a set of outputs that entail a set of triples in the label set. In this case, the KG is accurate yet the LLM performs worse as these outputs are not true-positive. In other words, an LLM output could either be negative or positive, yet not in the label set. For brevity, CWA is assumed, excluding the problematic positive outputs from true-positives. Lastly, the \textit{power} or how accurately the LLM represents the ground truth is important as well. The number of parameters is one of the factors that influence this variable to some extent. The LLMs with higher number of parameters generally tend to be more powerful (perform better). 
 
-Few inputs are tested. A prompt may differ due to its number of \textit{demonstrations} where each demonstration is an input-label pair, similar to a supervised setting. An N-shot prompt uses N demonstrations. TACRED dataset is preferred as the ground truth which has plenty of competition entries for F1 score evaluation \cite{zhang_position-aware_2017,noauthor_tacred_nodate}. It still has some inherent problems as well, discussed in detail in Re-TACRED paper \cite{stoica_re-tacred_2021}. ChatGPT free plan (which was using the GPT-4o at the time) and Phi-3 mini are used. The authors show that with only 3.8 billion parameters, Phi-3 mini performs close (or sometimes better) compared to models as large as 7 billion parameters. The variant with smaller context window of 4000 tokens is used (there is also a variant with 128000) \cite{abdin_phi-3_2024}. Calculating the token length for the prompts, the maximum value was 668, making larger context windows unnecessary due to memory concerns. 
+Few inputs with 0, 1 and 2-shot prompts are tested. A prompt may differ due to its number of \textit{demonstrations} where each demonstration is an input-label pair, similar to a supervised setting. An N-shot prompt uses N demonstrations. The query input is given at the end. TACRED dataset is preferred as the ground truth which has plenty of competition entries for F1 score evaluation \cite{zhang_position-aware_2017,noauthor_tacred_nodate}. It still has some inherent problems as well, discussed in detail in Re-TACRED paper \cite{stoica_re-tacred_2021}. ChatGPT free plan (which used the GPT-4o at the time) and Phi-3 mini are used. The authors show that with only 3.8 billion parameters, Phi-3 mini performs close (or sometimes better) compared to models as large as 7 billion parameters. The variant with smaller context window of 4000 tokens is used (there is also a variant with 128000) \cite{abdin_phi-3_2024}. Calculating the token length for the prompts, the maximum value was 668, making larger context windows unnecessary due to memory concerns. 
 
-Without the list of predicates, the models were creating their own \textit{explicit} relations. For such a triple, they either came up with a verb in the sentence as predicate; or a paraphrase of the verb. Adding the list of predicates to constrain the model did not prevent models from outputting irrational outputs as well. For instance, ChatGPT was outputting predicate values where they should not be (i.e. in place of tail values). Phi-3-mini performed worse. For some of the prompts, it was not complying with the prompts (i.e. plain Python list), giving outputs in different formats (e.g. markup languages, numbered list). Because Phi-3 is a family of open-source models, it is possible to adjust their generation parameters such as \textit{temperature}. $\text{Temperature}=0$ as suggested in the paper without sampling (i.e. greedy search). The generation parameters could have been manually fine-tuned. However, I decided to see if automatic fine-tuning is possible. There are existing hyperparameter tuning methods for cross-validation which seemed tricky to implement for manual prompting. 
+Without the list of predicates, the models were creating their own \textit{explicit} relations. For such a triple, they either came up with a verb in the sentence as predicate; or a paraphrase of the verb. Adding the list of predicates to constrain the model did not prevent models from outputting irrational outputs as well. For instance, ChatGPT outputted predicate values where they should not be (i.e. in place of tail values). Phi-3-mini performed worse. For some of the prompts, it did not comply with the prompts (i.e. plain Python list), giving outputs in different formats (e.g. markup languages, numbered list). Because Phi-3 is a family of open-source models, it is possible to adjust their generation parameters such as \textit{temperature}. $\text{Temperature}=0$ as suggested in the paper without sampling (i.e. greedy search). The generation parameters could have been manually fine-tuned. However, I decided to see if automatic fine-tuning is possible. There are existing hyperparameter tuning methods for cross-validation which seemed tricky to implement for manual prompting. 
 
 \section{Task: Prompt Tuning via Light-weight LLM}
 
 Due to the problems in the previous part, another idea was conceived. A lightweight LLM was going to be fine-tuned on a set of sentence-triple pairs, then the model performance was going to be evaluated. Separate model wasn't needed for prompt generation. Only a single model would be trained end-to-end, bearing the name \textit{end-to-end prompt tuning} for the project. Good enough fine-tuning could make a lightweight model more powerful. The scale of the model could be a plus for individual applications.
 
-It is possible to train a NN using plain supervised learning. However, I did not want to stop here and wanted to experiment with different training methods. There is a ton, yet starting simple would be more preferable. LLMs and RL methods are known to have Markov property. I decided to read on RL. I was looking for a book that also included implementations with the theory, so I came across \textit{Deep Reinforcement Learning Hands On} by Maxim Lapan. I read the book until the end of \textit{Chapter 14: Training Chatbots with RL} which took about 2 weeks. The implementation was based on seq2seq RNNs which is adapted to a decoder only LLM in the task. After Deepseek-R1 came out, its authors claimed that they were also using a similar technique to train their model. The technique is a \textit{policy gradient method}, called GRPO (\textit{Group
-Relative Policy Optimization}) \cite{deepseek-ai_deepseek-r1_2025, shao_deepseekmath_2024, schulman_proximal_2017}. At the time, \textit{REINFORCE} which is one of the least sophisticated methods to implement in this family was adopted. The implementation was already ready and reimplementing GRPO seemed risky.
+It is possible to train a NN using plain supervised learning. However, I did not want to stop here and wanted to experiment with different training methods. There is a ton, yet starting simple would be more preferable. LLMs and RL methods are known to have Markov property. I decided to read on RL. I was looking for a book that also included implementations with the theory, so I came across \textit{Deep Reinforcement Learning Hands On} by Maxim Lapan. I read the book until the end of \textit{Chapter 14: Training Chatbots with RL} which took about 2 weeks. The implementation is based on seq2seq RNNs which is adapted to a decoder only LLM in the task. After Deepseek-R1 came out, its authors claimed that they were also using a similar technique to train their model. The technique is a \textit{policy gradient method}, called GRPO (\textit{Group
+Relative Policy Optimization}) \cite{deepseek-ai_deepseek-r1_2025, shao_deepseekmath_2024, schulman_proximal_2017}. \textit{REINFORCE} which is one of the least sophisticated methods to implement in this family is adopted. At the time, the implementation was already ready and reimplementing GRPO seemed risky.
 
 In the upcoming two parts, the concepts from the book and other resources that are relevant to the task are explained. In the final two parts, the metrics used during training and evaluation, with the implementation details at the end are described. 
 \subsection{Reinforcement Learning Concepts}
@@ -373,7 +373,7 @@ List of predicates is included for more degrees of freedom. This allows giving d
 
 Preprocessing of the dataset is shown in part~\ref{dataset_transform}. Firstly, the dataset is mapped so that there is only two columns (sentence and labels, sample 1). Then ChatML (\textit{Chat Markup Language}, introduced by OpenAI) template is applied to the dataset (samples 2 and 3). The final step is the tokenization, which is not shown. When training, the triples are injected into the input sequence for reference. However, the model is expected to generate the data during evaluation. The triple is extracted as a separate column to compare the output at this stage. Because model is trained to give its answer after the generation prompt (<|assistant|>), it gives outputs irrelevant to the prompt without it at the end. This occurs during generation, which occurs during evaluation.
 \subsubsection{Model and Training}
-Web APIs are not preferred as the task requires sending costly bulks of data. Therefore, closed-source GPT variants and alike are avoided. Google Colab was used with occasional switches to Kaggle Notebook. With these tools, access to a compute power to host a large LLM was not possible. Therefore, lightweight LLMs with fewer number of parameters are preferred. Microsoft's Phi, Google's Gemma, Facebook's Llamma are a few. For comparison, GPT-3 has about 175 billion parameters requiring 350GB \cite{brown_language_2020} and is possibly not larger than GPT-4, whereas Phi-3-mini only has 3.8 billion parameters \cite{abdin_phi-3_2024} (2GB memory requirement according to the output of a program written for the work). Phi-3-mini is chosen due to the reasons in part~\ref{relx_manual_prompt}. Due to the memory concerns pointed out in part~\ref{qlora}, lightweight models become extra important for training. PyTorch library enables one to disable unnecessary computations such as gradient calculations and achieve significant memory gain during evaluation. As a side note, the codebase was built around Phi-3-mini. Therefore it was not cost effective to have models such as Phi-4 and Deepseek-R1 work seamlessly. These models were released toward the end of the internship period. 
+Web APIs are not preferred as the task requires sending costly bulks of data. Therefore, closed-source GPT variants and alike are avoided. Google Colab is used with occasional switches to Kaggle Notebook. With these tools, access to a compute power to host a large LLM is not possible. Therefore, lightweight LLMs with fewer number of parameters are preferred. Microsoft's Phi, Google's Gemma, Facebook's Llamma are a few. For comparison, GPT-3 has about 175 billion parameters requiring 350GB \cite{brown_language_2020} and is possibly not larger than GPT-4, whereas Phi-3-mini only has 3.8 billion parameters \cite{abdin_phi-3_2024} (2GB memory requirement according to the output of a program written for the work). Phi-3-mini is chosen due to the reasons in part~\ref{relx_manual_prompt}. Due to the memory concerns pointed out in part~\ref{qlora}, lightweight models become extra important for training. PyTorch library enables one to disable unnecessary computations such as gradient calculations and achieve significant memory gain during evaluation. As a side note, the codebase was built around Phi-3-mini. Therefore it was not cost effective to have models such as Phi-4 and Deepseek-R1 work seamlessly. These models were released toward the end of the internship period. 
 
 HuggingFace's \texttt{transformers} and \texttt{bitsandbytes} libraries for the model and Q-LoRA implementations are used respectively. Aside the parameters discussed in part~\ref{qlora}, the configuration class also takes the maximum sequence length which is 4096 (the context window size). Flash attention implementation could not be enabled for performance gain. Flash attention supports Ampere, Ada, or Hopper GPUs \cite{dao-ailab_github_2022}. Google Colab offers T4 which is Tesla; therefore, the plain implementation is preferred.
 
@@ -385,9 +385,9 @@ The difference between a number (which is a HP) of sampled logits from the model
 
 The loss function supports \textit{label smoothing}, which is a regularization technique that adds noise to the loss value. The returned loss is a linear interpolation between the original loss and the mean loss to make model decisions less certain for better generalization \cite{muller_when_2020}. The interpolation constant \textit{label smoothing factor} is another HP.
 
-For the LoRA parameters, Tuning $\alpha$ is unnecessary as mentioned in~\ref{lora}. Only the rank $r$ is tuned. The value closest to exponential median is used (The range was $r \in [1=2^0, 64=2^6]$ with median $8=2^3$, $32$ was chosen). LoRA adapters are type of NNs that could use regularization techniques. Therefore, they support dropout regularization, which is another HP. Even though LoftQ is described in the report, it was very challenging to use it. It is an iterative LoRA initialization method with complexity proportional to the number of adapter parameters. Because NNs tend to be more powerful with higher number of parameters, LoRA adapters are injected to all linear layers. Therefore, it took considerable time to compute LoftQ initialization. For each different LoRA rank, the parameters had to be reinitialized. There are precomputed LoftQ adapters available on the internet for some LoRA configurations, which was not matching the specified configurations. RS-LoRA is used as well.
+For the LoRA parameters, Tuning $\alpha$ is unnecessary as mentioned in~\ref{lora}. Only the rank $r$ is tuned. The value closest to exponential median is used (The range is $r \in [1=2^0, 64=2^6]$ with median $8=2^3$, $32$ is chosen). LoRA adapters are type of NNs that could use regularization techniques. Therefore, they support dropout regularization, which is another HP. Even though LoftQ is described in the report, it is very challenging to use it. It is an iterative LoRA initialization method with complexity proportional to the number of adapter parameters. Because NNs tend to be more powerful with higher number of parameters, LoRA adapters are injected to all linear layers. Therefore, it took considerable time to compute LoftQ initialization. For each different LoRA rank, the parameters had to be reinitialized. There are precomputed LoftQ adapters available on the internet for some LoRA configurations, which is not matching the specified configurations of the task. RS-LoRA is used as well.
 
-Lastly, for the optimizer \textit{AdamW} was used \cite{loshchilov_decoupled_2019}. The learning rate, betas, and weight decay are tuned.
+Lastly, \textit{AdamW} is used for the optimizer \cite{loshchilov_decoupled_2019}. The learning rate, betas, and weight decay are tuned.
 \subsubsection{Evaluation}
 The papers in part~\ref{relx_manual_prompt} were using F1 score. Micro F1 is used for evaluation. A unique triple is considered as a class. Instead of a CxC confusion matrix ($O(C^2)$), a counter of classes ($O(C)$) is constructed. The memory gain from this approach could be beneficial for larger KGs. For each prediction-label pair, the intersection gives true positives. The total number of true positives and the total length of both predictions and labels are used in the calculation.
 
