--- a/main.tex
+++ b/main.tex
@@ -371,7 +371,7 @@ A modified version of the prompt in part~\ref{relx_manual_prompt} is used
 \end{quote}
 List of predicates is included for more degrees of freedom. This allows giving different list of predicates for other graphs. 
 
-Preprocessing of the dataset is shown in part~\ref{dataset_transform}. Firstly, the dataset is mapped so that there is only two columns (sentence and labels, sample 1). Then ChatML (\textit{Chat Markup Language}, introduced by OpenAI) template is applied to the dataset (samples 2 and 3). The final step is the tokenization, which is not shown. When training, the triples are injected into the input sequence for reference. However, the model is expected to generate the data during evaluation. The triple is extracted as a separate column to compare the output at this stage. Because model is trained to give its answer after the generation prompt (<|assistant|>), it gives outputs irrelevant to the prompt without it at the end. This occurs during generation, which occurs during evaluation.
+Preprocessing of the dataset is shown in part~\ref{dataset_transform}. Firstly, the dataset is mapped so that there is only two columns. Then ChatML (\textit{Chat Markup Language}, introduced by OpenAI) template is applied to the dataset. The final step is the tokenization, which is not shown. When training, the triples are injected into the input sequence for reference. However, the model is expected to generate the data during evaluation. The triple is extracted as a separate column to compare the output at this stage. Because model is trained to give its answer after the generation prompt (<|assistant|>), it gives outputs irrelevant to the prompt without it at the end. This occurs during generation, which occurs during evaluation.
 \subsubsection{Model and Training}
 Web APIs are not preferred as the task requires sending costly bulks of data. Therefore, closed-source GPT variants and alike are avoided. Google Colab is used with occasional switches to Kaggle Notebook. With these tools, access to a compute power to host a large LLM is not possible. Therefore, lightweight LLMs with fewer number of parameters are preferred. Microsoft's Phi, Google's Gemma, Facebook's Llamma are a few. For comparison, GPT-3 has about 175 billion parameters requiring 350GB \cite{brown_language_2020} and is possibly not larger than GPT-4, whereas Phi-3-mini only has 3.8 billion parameters \cite{abdin_phi-3_2024} (2GB memory requirement according to the output of a program written for the work). Phi-3-mini is chosen due to the reasons in part~\ref{relx_manual_prompt}. Due to the memory concerns pointed out in part~\ref{qlora}, lightweight models become extra important for training. PyTorch library enables one to disable unnecessary computations such as gradient calculations and achieve significant memory gain during evaluation. As a side note, the codebase was built around Phi-3-mini. Therefore it was not cost effective to have models such as Phi-4 and Deepseek-R1 work seamlessly. These models were released toward the end of the internship period. 
 
@@ -750,6 +750,30 @@ Prediction:
  ('Lisa Muskat', 'Produced by', 'Lisa Muskat'),
  ('Cami Taylor', 'Produced by', 'Cami Taylor'),
  ('Warner Independent Pictures', 'Released by', 'Warner Independent Pictures')]
+\end{lstlisting}
+\subsection{Dataset Transformations}\label{dataset_transform}
+\subsubsection{Train Sample}
+\paragraph{Sentence-Triples Columns}:
+\begin{lstlisting}
+{'sentence': 'Book by arthur laurents, suggested by the memoirs of gypsy rose lee; music by jule styne; lyrics by stephen sondheim; directed by mr. laurents; choreography by jerome robbins, reproduced by bonnie walker; music director-arranger, patrick vaccariello; sets by james youmans; costumes by martin pakledinaz; lighting by howell binkley; sound by dan moses schreier; production stage manager, craig jacobs; orchestrations by sid ramin and robert ginzler; dance arrangements by john kander; music coordinator, seymour red press.', 'labels': "[('Jerome Robbins', 'NA', 'James Youmans')]"}
+Mapping columns to 'messages'
+\end{lstlisting}
+\paragraph{ChatML}:
+\begin{lstlisting}
+{'messages': "<|user|>\nList of predicates is ['org:founded', 'org:subsidiaries', 'per:date_of_birth', 'per:cause_of_death',  'per:age', 'per:stateorprovince_of_birth', 'per:countries_of_residence', 'per:country_of_birth',  'per:stateorprovinces_of_residence', 'org:website', 'per:cities_of_residence', 'per:parents',  'per:employee_of', 'NA', 'per:city_of_birth', 'org:parents', 'org:political/religious_affiliation',  'per:schools_attended', 'per:country_of_death', 'per:children', 'org:top_members/employees',  'per:date_of_death', 'org:members', 'org:alternate_names', 'per:religion', 'org:member_of',  'org:city_of_headquarters', 'per:origin', 'org:shareholders', 'per:charges', 'per:title',  'org:number_of_employees/members', 'org:dissolved', 'org:country_of_headquarters', 'per:alternate_names',  'per:siblings', 'org:stateorprovince_of_headquarters', 'per:spouse', 'per:other_family', 'per:city_of_death',  'per:stateorprovince_of_death', 'org:founded_by'].  What Subject-Predicate-Object triples are included in the following sentence?\n Sentence: Book by arthur laurents, suggested by the memoirs of gypsy rose lee; music by jule styne; lyrics by stephen sondheim; directed by mr. laurents; choreography by jerome robbins, reproduced by bonnie walker; music director-arranger, patrick vaccariello; sets by james youmans; costumes by martin pakledinaz; lighting by howell binkley; sound by dan moses schreier; production stage manager, craig jacobs; orchestrations by sid ramin and robert ginzler; dance arrangements by john kander; music coordinator, seymour red press.<|end|>\n<|assistant|>\n[('Jerome Robbins', 'NA', 'James Youmans')]<|end|>\n<|endoftext|>"}
+Split validation
+{'sentence': 'The spokesman of the nigeria police force emmanuel ojukwu told reporters in abuja that 162 of the suspects were already being prosecuted.', 'labels': "[('Nigeria Police Force', 'NA', '162')]"}
+Mapping columns to 'messages'
+\end{lstlisting}
+\subsubsection{Validation/Test Sample}
+\paragraph{Sentence-Triples Columns}:
+\begin{lstlisting}
+{'labels': "[('Nigeria Police Force', 'NA', '162')]", 'messages': [{'content': "List of predicates is ['org:founded', 'org:subsidiaries', 'per:date_of_birth', 'per:cause_of_death',  'per:age', 'per:stateorprovince_of_birth', 'per:countries_of_residence', 'per:country_of_birth',  'per:stateorprovinces_of_residence', 'org:website', 'per:cities_of_residence', 'per:parents',  'per:employee_of', 'NA', 'per:city_of_birth', 'org:parents', 'org:political/religious_affiliation',  'per:schools_attended', 'per:country_of_death', 'per:children', 'org:top_members/employees',  'per:date_of_death', 'org:members', 'org:alternate_names', 'per:religion', 'org:member_of',  'org:city_of_headquarters', 'per:origin', 'org:shareholders', 'per:charges', 'per:title',  'org:number_of_employees/members', 'org:dissolved', 'org:country_of_headquarters', 'per:alternate_names',  'per:siblings', 'org:stateorprovince_of_headquarters', 'per:spouse', 'per:other_family', 'per:city_of_death',  'per:stateorprovince_of_death', 'org:founded_by'].  What Subject-Predicate-Object triples are included in the following sentence?\n Sentence: The spokesman of the nigeria police force emmanuel ojukwu told reporters in abuja that 162 of the suspects were already being prosecuted.", 'role': 'user'}]}
+Formatting to chatml format
+\end{lstlisting}
+\paragraph{ChatML}:
+\begin{lstlisting}
+{'labels': "[('Nigeria Police Force', 'NA', '162')]", 'messages': "<|user|>\nList of predicates is ['org:founded', 'org:subsidiaries', 'per:date_of_birth', 'per:cause_of_death',  'per:age', 'per:stateorprovince_of_birth', 'per:countries_of_residence', 'per:country_of_birth',  'per:stateorprovinces_of_residence', 'org:website', 'per:cities_of_residence', 'per:parents',  'per:employee_of', 'NA', 'per:city_of_birth', 'org:parents', 'org:political/religious_affiliation',  'per:schools_attended', 'per:country_of_death', 'per:children', 'org:top_members/employees',  'per:date_of_death', 'org:members', 'org:alternate_names', 'per:religion', 'org:member_of',  'org:city_of_headquarters', 'per:origin', 'org:shareholders', 'per:charges', 'per:title',  'org:number_of_employees/members', 'org:dissolved', 'org:country_of_headquarters', 'per:alternate_names',  'per:siblings', 'org:stateorprovince_of_headquarters', 'per:spouse', 'per:other_family', 'per:city_of_death',  'per:stateorprovince_of_death', 'org:founded_by'].  What Subject-Predicate-Object triples are included in the following sentence?\n Sentence: The spokesman of the nigeria police force emmanuel ojukwu told reporters in abuja that 162 of the suspects were already being prosecuted.<|end|>\n<|assistant|>\n"}
 \end{lstlisting}
 \bibliographystyle{IEEEtran}
 \bibliography{refs}
